# POTION2_bkp

./: README.md
POTION2/: CHANGES.txt  INSTALL.txt  README.txt  install.sh
POTION2/config_files/: dummy_potion_user_config_file_site_hard  dummy_potion_user_config_file_site_soft  dummy_potion_user_config_file_site_standard  potion_config
POTION2/examples/MYC/config_models/: MYC.conf
POTION2/examples/TRYP/config_models/: TRYP.conf  TRYP_branch_muscle_dnaml.conf  TRYP_codonphyml.conf  TRYP_fastml.conf
POTION2/programs/clustalo/clustal-omega-1.2.4/: Makefile  config.status  libtool
POTION2/programs/fastcodeml/: 00README  CHANGELOG  fast
POTION2/programs/fastcodeml/Fastcodeml/: AlignedAllocator.cpp  AlignedAllocator.h  AlignedMalloc.h  BayesTest.cpp  BayesTest.h  BranchSiteModel.cpp  BranchSiteModel.h  CMakeLists.txt  CmdLine.cpp  CmdLine.h  CodeMLoptimizer.cpp  CodeMLoptimizer.h  CodonFrequencies.cpp  CodonFrequencies.h  CompilerHints.h  DAGScheduler.cpp  DAGScheduler.h  ENSGT00390000016702.Primates.01.002.nwk  ENSGT00390000016702.Primates.01.phy  Exceptions.h  FatVectorTransform.cpp  FatVectorTransform.h  FillMatrix.cpp  Forest.cpp  Forest.h  ForestExport.cpp  ForestExport.h  ForestNode.h  Genes.cpp  Genes.h  HighLevelCoordinator.cpp  HighLevelCoordinator.h  INSTALL  MathSupport.h  MatrixSize.h  Newick.cpp  Newick.h  NewickGrammar.h  ParseParameters.cpp  ParseParameters.h  (+26 more)
POTION2/programs/newick/newick-utils-1.6/: Makefile  config.h  config.status  libtool
POTION2/programs/paml/: ._paml4.8
POTION2/programs/paml/paml4.8/: ._3s.trees  ._4s.trees  ._5s.trees  ._6s.trees  ._GeneticCode.txt  ._README.txt  ._Technical  ._aaml.ctl  ._baseml.ctl  ._bin  ._brown.nuc  ._brown.rooted.trees  ._brown.trees  ._codeml.ctl  ._codonml.ctl  ._dat  ._doc  ._examples  ._mcmctree.ctl  ._pamp.ctl  ._paupblock  ._paupend  ._paupstart  ._src  ._stewart.aa  ._stewart.trees  ._yn00.ctl
POTION2/programs/phipack/: PhiPack.tar
POTION2/programs/phipack/PhiPack/: Phi  Profile
POTION2/programs/phyml-master/: Makefile  config.h  config.status
POTION2/programs/phyml-master/doc/: Makefile
POTION2/programs/phyml-master/src/: Makefile  phyml
POTION2/results_TRYP/: log
POTION2/results_TRYP/intermediate_files/19340281/: 19340281.cluster.aa.fa  19340281.cluster.aa.fa.aln  19340281.cluster.aa.fa.aln.aa.phy  19340281.cluster.aa.fa.aln.aa.phy.trim  19340281.cluster.aa.fa.aln.nt.fa  19340281.cluster.aa.fa.aln.nt.phy  19340281.cluster.aa.fa.aln.nt.phy.trim  19340281.cluster.aa.fa.aln.nt.phy.trim.boot  19340281.cluster.aa.fa.aln.nt.phy.trim.conf.boot  19340281.cluster.aa.fa.aln.nt.phy.trim.conf.final_tree  19340281.cluster.aa.fa.aln.nt.phy.trim.conf.tree  19340281.cluster.aa.fa.aln.nt.phy.trim.final_tree  19340281.cluster.aa.fa.aln.nt.phy.trim.paml.model1  19340281.cluster.aa.fa.aln.nt.phy.trim.paml.model1.config  19340281.cluster.aa.fa.aln.nt.phy.trim.paml.model2  19340281.cluster.aa.fa.aln.nt.phy.trim.paml.model2.config  19340281.cluster.aa.fa.aln.nt.phy.trim.paml.model7  19340281.cluster.aa.fa.aln.nt.phy.trim.paml.model7.config  19340281.cluster.aa.fa.aln.nt.phy.trim.paml.model8  19340281.cluster.aa.fa.aln.nt.phy.trim.paml.model8.config  19340281.cluster.aa.fa.aln.nt.phy.trim.tree  19340281.cluster.aa.fa.aln.pairs  19340281.cluster.nt.fa  19340281.cluster.nt.fa.aln.pairs  2NG.dN  2NG.dS  2NG.t  4fold.nuc  id_names  lnf  outfile  rst  rst1  rub
POTION2/results_TRYP/intermediate_files/19340333/: 19340333.cluster.aa.fa  19340333.cluster.aa.fa.aln  19340333.cluster.aa.fa.aln.aa.phy  19340333.cluster.aa.fa.aln.aa.phy.trim  19340333.cluster.aa.fa.aln.nt.fa  19340333.cluster.aa.fa.aln.nt.phy  19340333.cluster.aa.fa.aln.nt.phy.trim  19340333.cluster.aa.fa.aln.nt.phy.trim.boot  19340333.cluster.aa.fa.aln.nt.phy.trim.conf.boot  19340333.cluster.aa.fa.aln.nt.phy.trim.conf.final_tree  19340333.cluster.aa.fa.aln.nt.phy.trim.conf.tree  19340333.cluster.aa.fa.aln.nt.phy.trim.final_tree  19340333.cluster.aa.fa.aln.nt.phy.trim.paml.model1  19340333.cluster.aa.fa.aln.nt.phy.trim.paml.model1.config  19340333.cluster.aa.fa.aln.nt.phy.trim.paml.model2  19340333.cluster.aa.fa.aln.nt.phy.trim.paml.model2.config  19340333.cluster.aa.fa.aln.nt.phy.trim.paml.model7  19340333.cluster.aa.fa.aln.nt.phy.trim.paml.model7.config  19340333.cluster.aa.fa.aln.nt.phy.trim.paml.model8  19340333.cluster.aa.fa.aln.nt.phy.trim.paml.model8.config  19340333.cluster.aa.fa.aln.nt.phy.trim.tree  19340333.cluster.aa.fa.aln.pairs  19340333.cluster.nt.fa  19340333.cluster.nt.fa.aln.pairs  2NG.dN  2NG.dS  2NG.t  4fold.nuc  id_names  lnf  outfile  rst  rst1  rub  time_model_8
POTION2/results_TRYP/intermediate_files/19362820/: 19362820.cluster.aa.fa  19362820.cluster.aa.fa.aln  19362820.cluster.aa.fa.aln.aa.phy  19362820.cluster.aa.fa.aln.aa.phy.trim  19362820.cluster.aa.fa.aln.nt.fa  19362820.cluster.aa.fa.aln.nt.phy  19362820.cluster.aa.fa.aln.nt.phy.trim  19362820.cluster.aa.fa.aln.nt.phy.trim.boot  19362820.cluster.aa.fa.aln.nt.phy.trim.conf.boot  19362820.cluster.aa.fa.aln.nt.phy.trim.conf.final_tree  19362820.cluster.aa.fa.aln.nt.phy.trim.conf.tree  19362820.cluster.aa.fa.aln.nt.phy.trim.final_tree  19362820.cluster.aa.fa.aln.nt.phy.trim.paml.model1  19362820.cluster.aa.fa.aln.nt.phy.trim.paml.model1.config  19362820.cluster.aa.fa.aln.nt.phy.trim.paml.model2  19362820.cluster.aa.fa.aln.nt.phy.trim.paml.model2.config  19362820.cluster.aa.fa.aln.nt.phy.trim.paml.model7  19362820.cluster.aa.fa.aln.nt.phy.trim.paml.model7.config  19362820.cluster.aa.fa.aln.nt.phy.trim.paml.model8  19362820.cluster.aa.fa.aln.nt.phy.trim.paml.model8.config  19362820.cluster.aa.fa.aln.nt.phy.trim.tree  19362820.cluster.aa.fa.aln.pairs  19362820.cluster.nt.fa  19362820.cluster.nt.fa.aln.pairs  2NG.dN  2NG.dS  2NG.t  4fold.nuc  id_names  lnf  outfile  rst  rst1  rub  time_f_tree  time_model_7
POTION2/results_TRYP/intermediate_files/19416372/: 19416372.cluster.aa.fa  (+34 more)
POTION2/results_TRYP/results/: allvalid_for_enrichment  final_results.out  positive.out  positive.out.interleaved  positive.out.positives_m12.fasta  positive.out.positives_m78.fasta  summary.out
(+1600 files in other folders)
